# audio_scripter

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  STATUS.md  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
Source/: Constants.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScriptCodeTokeniser.cpp  ScriptCodeTokeniser.h  ScriptEngine.cpp  ScriptEngine.h  ScriptParser.cpp  ScriptParser.h  ScriptTokenizer.cpp  ScriptTokenizer.h
docs/: CHANGELOG.md  DEVELOPER_GUIDE.md  EFFECTS_ENGINE_ANALYSIS.md  LANGUAGE_SPEC.md  LANGUAGE_SPEC_v2.md  PLUGIN_AUDIT_AND_NEXT_STEPS.md  RESEARCH.md  ROADMAP.md  developer_guide.html  index.html  language_spec.html
examples/: additive_square.ascr  advanced_user_functions.ascr  autopan.ascr  autowah.ascr  chaotic_lfo.ascr  chorus.ascr  clean_doubler.ascr  cos_phaser.ascr  cross_feedback_distortion.ascr  envelope_duck_tremor.ascr  exp_compressor.ascr  formant_robot.ascr  harmonic_exciter.ascr  highpass_filter.ascr  iter_fold.ascr  log_compander.ascr  low_pass_morph.ascr  micro_delay_widen.ascr  ms_width.ascr  noisy_transient_gate.ascr  phase_fm.ascr  ping_pong_delay.ascr  polyrhythm_gate.ascr  reverb.ascr  rhythmic_pulse_gate.ascr  ring_mod_fixed.ascr  ring_modulator.ascr  sample_hold.ascr  sample_rate_reducer.ascr  schmitt_gate.ascr  simple_delay.ascr  stereo_bit_crush_drift.ascr  svf_morph_sweeper.ascr  tan_fold_crusher.ascr  test_factorial.ascr  test_type_error.ascr  tilt_eq.ascr  time_ramp_ring_modulation.ascr  transient_shaper.ascr  transparent_soft_clip.ascr  (+3 more)
scripts/: build_and_open_als.sh  build_release.sh
test Project/: test.als
test Project/Backup/: test [2026-04-27 234011].als  test [2026-04-29 000807].als  test [2026-04-29 010153].als
test Project/Samples/Processed/Bounce/: Bounce 1-E-Piano Basic [2026-05-06 064550]-1.wav.asd
tests/: RtSafetyTests.cpp  ScriptParserTests.cpp
tests_python/: test_validate_scripts.py
tools/: RenderEffectReport.cpp  validate_scripts.py
